Fix navbar layout, spacing, and logo alignment

--- a/code.css
+++ b/code.css
@@ -16,29 +16,37 @@
 
 }
 
-.logo{
-    color: aquamarine;
-    font-family:Arial, Helvetica, sans-serif;
-    font-style: oblique;
-    top: 1em;
-    position: absolute;
-    left: 1em;
-    margin: 0;
-
-
+.logo {
+    color: white; 
+    text-decoration: none; 
+    font-size: 24px;
+    font-weight: bold;
+    font-family: sans-serif;
 }
 
-nav h2{
-}
 
-nav{
+
+
+
+nav {
     display: flex;
-    justify-content: center;
-    gap: 1em;
-    background-color: rgb(16, 97, 8);
-    padding: 3em;
+    justify-content:center; 
+    align-items: center;
+    padding: 30px;
+    background-color: darkgreen;
+    gap: 30px;
+    justify-content: space-between;
 
 
+}
+
+nav ul {
+    display: flex;
+    list-style: none;
+    gap: 30px;
+    margin: 0;
+    padding: 0;
+ 
 }
 
 nav a{
@@ -46,10 +54,9 @@ nav a{
     color:rgb(214, 214, 214);
     font-family: Arial, Helvetica, sans-serif;
     transition: 0.5s;
-    border-radius: 3em;
-    width: 5em;
-    text-align: center;
     font-family: Arial, Helvetica, sans-serif;
+
+    
     
     
 
